Its builds, Still some things to work out